Changelog
=========

1.1.4 (unreleased)
------------------

- Ensure links on user preference panes adhere to navigation root.
  Fixes https://dev.plone.org/ticket/11909.
  [davidjb]

- Avoid direct zope.app.form dependency.
  [hannosch]

- Support redirecting to a URL specified in the 'came_from' query string
  parameter following registration.
  [davisagli]


1.1.3 (2012-01-04)
------------------

- Setting a member data field to an empty string now works.
  Fixes http://dev.plone.org/ticket/12314
  [maurits]

- Fix for: Plone Administrator unable to edit User Data when email is
  used as login.  Fixes http://dev.plone.org/plone/ticket/12297
  [vmaksymiv, myroslav]

- Explicitly set the mail_me field as not required.
  [jcbrand]


1.1.2 (2011-08-23)
------------------

- Make sure that users with the Site Administrator role can add new users to
  groups. Fixes http://dev.plone.org/plone/ticket/11888
  [davisagli]


1.1.1 - 2011-06-02
------------------

- Check for permission when editing other users' profiles.
  This fixes http://dev.plone.org/plone/ticket/11842 and
  http://plone.org/products/plone/security/advisories/CVE-2011-1950
  [fRiSi, davisagli]

- Add MANIFEST.in
  [WouterVH]


1.1 - 2011-04-03
----------------

- Include plone.app.controlpanel configure.zcml because we use permissions
  defined in this package.
  [vincentfretin]

- Use portal object instead of self.context in AddUserForm so we can easily
  subclass the class for another context.
  [vincentfretin]


1.1b2 - 2011-03-02
------------------

- Fixed test of the default user portrait, which changed from
  defaultUser.gif to defaultUser.png in Products.PlonePAS 4.0.5.
  [maurits]


1.1b1 - 2011-01-03
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

- Don't allow non-Managers to add new users to groups that grant the Manager
  role.
  [davisagli]

- Protect the user management forms with the